Refactor org.weasis.core.api.net package and add test classes