@@ -14,7 +14,6 @@ import java.io.File;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Objects;
 import org.weasis.core.util.StringUtil;
 
@@ -24,7 +23,7 @@ public final class URIUtils {
   private URIUtils() {}
 
   public static URI getURI(String pathOrUri) throws URISyntaxException {
-    Objects.requireNonNull(pathOrUri, "Path or URI cannot be null");
+    Objects.requireNonNull(pathOrUri, "pathOrUri");
     try {
       return new URI(pathOrUri);
     } catch (URISyntaxException e) {
@@ -35,7 +34,7 @@ public final class URIUtils {
   private static URI convertPathToURI(String path, URISyntaxException originalException)
       throws URISyntaxException {
     try {
-      return Paths.get(path).toUri();
+      return Path.of(path).toUri();
     } catch (Exception ex) {
       originalException.addSuppressed(ex);
       throw originalException;
@@ -62,38 +61,26 @@ public final class URIUtils {
   }
 
   /**
-   * Converts a file URI to a Path, handling UNC paths (e.g. file://wsl.localhost/... or
-   * file://server/share/...).
-   *
-   * @param uri the URI to convert
-   * @return the corresponding Path
+   * Converts a file URI to a Path, handling Windows UNC paths (e.g. {@code file://server/share}).
    */
   public static Path toPath(URI uri) {
-    Objects.requireNonNull(uri, "URI cannot be null");
+    Objects.requireNonNull(uri, "uri");
+    if (uri.getScheme() == null) {
+      return Path.of(uri.getPath());
+    }
     if (uri.getAuthority() != null && SystemInfo.isWindows) {
-      // UNC path (e.g. file://server/share/...)
       return Path.of("\\\\" + uri.getAuthority() + uri.getPath());
     }
-    return Paths.get(uri);
+    return Path.of(uri);
   }
 
-  /**
-   * Converts a file URI to a File, handling UNC paths (e.g. file://wsl.localhost/... or
-   * file://server/share/...).
-   *
-   * @param uri the URI to convert
-   * @return the corresponding File
-   */
+  /** Converts a file URI to a File, handling Windows UNC paths. */
   public static File toFile(URI uri) {
     return toPath(uri).toFile();
   }
 
   public static Path getAbsolutePath(URI uri) {
-    Objects.requireNonNull(uri, "URI cannot be null");
-
-    if (!isFileURI(uri)) {
-      return null;
-    }
-    return toPath(uri).toAbsolutePath();
+    Objects.requireNonNull(uri, "uri");
+    return isFileURI(uri) ? toPath(uri).toAbsolutePath() : null;
   }
 }
